Version V5.9 R7.9

16/12/20 /MK Change - MainUnit - Show Parlour Link and Ration Calc icons but give "acquire this facility" error if the module is not installed i.e. not purchased.

Version V5.9 R7.8

04/12/20 /MK Change - uHerdSync - CreateHealthEvents - If multi treatment then save first event as dryoff and any following treatments as remedy events.
                                                     - Also change the comment of following treatments of dry off events to Remedy Event similar to non Dry Off Events.
                                                     - Set new DryOffSaved variable boolean to true if event is dry off and its the first treatment.
                                - AddEventToEventsExt - No need to check for EventId as we allow events to come in here that were not saved
                                                        because the animal doesn't exist in the database so push back the event as synced.
                    - uRemittance, DaZMisc - Added Jennings to the list of factories that a file can be requested from.   
15/12/20 /MK Change - GenTypesConst - Changed cUnitedDairiesURL URL as requested by George (TGM).
                    - uCallToExternalProgram - CallTeamViewer - Changed TeamViewer URL to look at new Kingswood log version of TeamViewer as TeamViewer9 is not supported.
16/12/20 /MK Bug Fix - SaleEligibility - Fixed problem where the Days To FQAS and Date of FQAS headings were appearing report but the data wasn't - TGM reported bug.
                                       - Fixed problem where "Show animals with Days To FQAS on or before" - TGM reported bug.

Version V5.9 R7.7

02/12/20 /MK Change - uSystem - Removed Emer Howard's phone number from Evening Support but leave Evening Support - GL request.
02/12/20 /MK Bug Fix - uUpdateTables - UpdateGenLook - Changed Foot to Hoof and fixed spelling misate of Paring - GL request.

Version V5.9 R7.6
