@@ -27,6 +27,7 @@
                                    - If not classification information then for PD events use Days In Calf for comment.
 
    28/08/17 [V5.7 R2.1] /MK Bug Fix - GetAnimalID - This search was only working for tag numbers not animal numbers.
+                            Additional Feature - Added uProgressIndicator to show progress of reading the file and saving the events.
 }
 
 unit uDanRyanImport;
@@ -512,7 +513,7 @@ begin
       ProgressIndicator.Close;
       Application.ProcessMessages;
       Update;
-      Screen.Cursor := crDefault
+      Screen.Cursor := crDefault;
    end;
 
    FEventTable.Close;
@@ -550,6 +551,9 @@ begin
    EventGridDBTableView.DataController.DataSource := nil;
    FEventTable.Filtered := False;
    FEventTable.Filter := '';
+
+   //   16/12/20 [V5.9 R7.9] /MK Change - Default the ActivePageIndex to Pregnant as this event should always exist.
+   pcEvents.ActivePageIndex := tsPregnant.PageIndex;
 
    if pcEvents.ActivePage <> nil then
       begin
